--- a/references.bib
+++ b/references.bib
@@ -719,4 +719,50 @@
   url      = {https://doi.org/10.1016/j.jalgebra.2024.10.017},
 }
 
+@Article{Bonnafe2006,
+  author     = {Bonnaf\'e, C\'edric},
+  journal    = {Ast\'erisque},
+  title      = {Sur les caract\`eres des groupes r\'eductifs finis \`a{} centre non connexe: applications aux groupes sp\'eciaux lin\'eaires et unitaires},
+  year       = {2006},
+  issn       = {0303-1179,2492-5926},
+  number     = {306},
+  pages      = {vi+165},
+  fjournal   = {Ast\'erisque},
+  mrclass    = {20G40 (20G05)},
+  mrnumber   = {2274998},
+  mrreviewer = {Robert\ B\'edard},
+}
+
+@Article{Lusztig1977,
+  author     = {Lusztig, G.},
+  journal    = {Invent. Math.},
+  title      = {Irreducible representations of finite classical groups},
+  year       = {1977},
+  issn       = {0020-9910,1432-1297},
+  number     = {2},
+  pages      = {125--175},
+  volume     = {43},
+  doi        = {10.1007/BF01390002},
+  fjournal   = {Inventiones Mathematicae},
+  mrclass    = {20C15},
+  mrnumber   = {463275},
+  mrreviewer = {James\ E.\ Humphreys},
+  url        = {https://doi.org/10.1007/BF01390002},
+}
+
+@Book{GeckMalle2020,
+  author     = {Geck, Meinolf and Malle, Gunter},
+  publisher  = {Cambridge University Press, Cambridge},
+  title      = {The character theory of finite groups of {L}ie type},
+  year       = {2020},
+  isbn       = {978-1-108-48962-1},
+  note       = {A guided tour},
+  series     = {Cambridge Studies in Advanced Mathematics},
+  volume     = {187},
+  mrclass    = {20C33 (20D06 20G05)},
+  mrnumber   = {4211779},
+  mrreviewer = {Donald\ L.\ White},
+  pages      = {ix+394},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
